--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^7.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
