--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/form-control": "^2.2.0",
+    "@chakra-ui/icon": "^3.2.0",
     "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/layout": "^2.3.1",
+    "@chakra-ui/media-query": "^3.3.0",
+    "@chakra-ui/menu": "^2.2.1",
     "@chakra-ui/react": "^2.10.4",
+    "@chakra-ui/spinner": "^2.1.0",
+    "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.7",
+    "chakra-react-select": "^4.7.6",
     "core-js": "^3.31.0",
     "framer-motion": "^11.15.0",
     "html2canvas": "^1.4.1",
@@ -25,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-select": "^5.10.2",
     "react-to-print": "^3.0.2",
     "tailwindcss": "^4.0.6"
   },
